@@ -111,6 +111,7 @@ const gchar *g_mime_part_get_filename (const GMimePart *mime_part);
 void g_mime_part_set_boundary (GMimePart *mime_part, const gchar *boundary);
 const gchar *g_mime_part_get_boundary (GMimePart *mime_part);
 
+void g_mime_part_set_content_array (GMimePart *mime_part, gchar * content, guint len);
 void g_mime_part_set_content (GMimePart *mime_part, const gchar *content, guint len);
 void g_mime_part_set_pre_encoded_content (GMimePart *mime_part, const gchar *content,
 					  guint len, GMimePartEncodingType encoding);
