@@ -1,3 +1,7 @@
+2001-01-26  Charles Kerr <charles@superpimp.org>
+
+	* gmime-part.c (g_mime_part_set_content_array): new function.
+
 2001-01-25  Charles Kerr <charles@superpimp.org>
 
 	* gmime-part.c (g_mime_part_destroy): fix memory leak - the
